# App

./: .gitignore  AGENTS.md  README.md  build_accv_llama.sh  gradle.properties  settings.gradle.kts
.claude/: settings.local.json
app/: build.gradle.kts
app/src/androidTest/java/com/example/genionputtest/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_bridge.cpp
app/src/main/java/com/example/genionputtest/: BenchmarkUtils.kt  MainActivity.kt
app/src/main/java/com/example/genionputtest/benchmark/: LatencyBreakdown.kt  LatencyTracker.kt
app/src/main/java/com/example/genionputtest/fastvlm/: FastVlmEngine.kt  FastVlmPromptDefaults.kt  FastVlmRequest.kt  FastVlmResponse.kt
app/src/main/java/com/example/genionputtest/llamacpp/: LlamaCppBridge.kt  LlamaCppEngine.kt
app/src/main/java/com/example/genionputtest/video/: AdaptiveVlmRunner.kt  CameraFrameStream.kt  EvalLogger.kt  FrameDiffAnalyzer.kt  TierBarView.kt  VideoFrameExtractor.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/genionputtest/: BenchmarkStatusFormatterTest.kt  BenchmarkUtilsTest.kt  ClassificationUtilsTest.kt  ExampleUnitTest.kt  FastVlmUiModeTest.kt  MainScreenCopyTest.kt  ModelCatalogTest.kt
downloads/: uidump.xml  uidump_back.xml  uidump_check_cpu.xml  uidump_compare.xml  uidump_cpu_set.xml  uidump_current.xml  uidump_settings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
tmp/: enterexit_adaptive.csv  eval_adaptive_20260406.csv  eval_adaptive_20260406_v2.csv  eval_baseline_chase.csv  eval_latest.csv  fight_chase_adaptive2.csv  oneshop_baseline.csv  shopassistant_baseline.csv
tmp/all_csvs/: eval_adaptive_20260406_020847.csv  eval_adaptive_20260406_021311.csv  eval_adaptive_20260406_023649.csv  eval_adaptive_20260406_024302.csv  eval_adaptive_20260406_024936.csv  eval_adaptive_20260406_025721.csv  eval_adaptive_20260406_030032.csv  eval_adaptive_20260406_051302.csv  eval_baseline_20260402_031913.csv  eval_baseline_20260406_023317.csv  eval_baseline_20260406_024808.csv  eval_baseline_20260406_025145.csv  eval_baseline_20260406_025404.csv  eval_baseline_20260406_025923.csv  eval_baseline_20260406_030531.csv  eval_baseline_20260406_051738.csv
tmp/eval_results/: eval_adaptive_20260402_030534.csv
tmp/litertlm_090/: R.txt  THIRD_PARTY_NOTICE.txt
tools/eval_analysis/: analyze.py  analyze_all.py
tools/mobileclip2/: export_mobileclip2_s0.py  requirements.txt
tools/mobileclip2/artifacts/: README.md
(+34 files in other folders)
